fix: mobile - credits modal rewards alignment & reminder icon inline

--- a/src/components/modal/credits/credits.module.scss
+++ b/src/components/modal/credits/credits.module.scss
@@ -53,7 +53,7 @@
   li {
     margin: 0;
     display: flex;
-    height: 58px;
+    padding: 0 8px;
     line-height: 20px;
     border-bottom: 1px solid rgba($color-border-red, 0.35);
     align-items: center;
@@ -70,6 +70,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
+  margin-right: 10px;
 
   > span {
     display: block;
